--- a/rh/views/departement.xml
+++ b/rh/views/departement.xml
@@ -1,6 +1,5 @@
-
 <odoo>
-     <!-- Create an action for menu 'depart'!-->
+    <!-- Create an action for menu 'depart'!-->
     <record model="ir.actions.act_window" id="departement_list_action">
         <field name="name">Departements</field>
         <field name="res_model">rh.departement</field>
@@ -11,12 +10,12 @@
     </record>
 
 
-        <!-- Create a tree view for model 'employee'!-->
+    <!-- Create a tree view for model 'departement'!-->
     <record model="ir.ui.view" id="tree_view_departement">
         <field name="name">view_departement_tree</field>
         <field name="model">rh.departement</field>
         <field name="arch" type="xml">
-            <tree >
+            <tree>
                 <field name="name"/>
                 <field name="site_dep"/>
             </tree>
